# GeneratorAndroid

./: .gitignore  README.md  Грпфик.graphml  Структура Audio.graphml  Структура Generator Android 2.graphml  Структура Generator Android.graphml  Цвета для скриптов.xlsx
samples/generator2/: .gitignore  .graphifyignore  build.gradle  gradle.properties  local.properties  settings.gradle
samples/generator2/.artifacts/a2c01dcd-b049-4984-a0d6-85ff16b8f525/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
samples/generator2/app/: .gitignore  benckmark-rules.pro  build.gradle  google-services.json  proguard-rules.pro
samples/generator2/app/debug/: output-metadata.json
samples/generator2/app/release/: output-metadata.json
samples/generator2/app/schemas/com.example.generator2.room.AppDatabase/: 1.json  2.json
samples/generator2/app/src/main/: AndroidManifest.xml
samples/generator2/app/src/main/cpp/: CMakeLists.txt  ChunkerProcessor.cpp  ChunkerProcessor.h  CrossCorrelation.h  Goertzel.h  HelloOboeEngine.cpp  HelloOboeEngine.h  LatencyTuningCallback.h  Processor.h  ScaleBuffer.h  ScaleBufferBase.h  SoundGenerator.h  TFT.h  canvas.cpp  channel.cpp  colormaps.cpp  fft.h  generator.cpp  generator.h  generator2.cpp  jni_bridge.cpp  jni_bridge2.cpp  jni_bridgeImpulse.cpp  plasma.cpp  renderchannel.cpp  renderchannel.h  scale.h  scope.cpp  scope.h  signal.h  waterfall.cpp
samples/generator2/app/src/main/cpp/attic/: minidsp.c
samples/generator2/app/src/main/cpp/audio/: audio_main.cpp  buf_manager.h
samples/generator2/app/src/main/cpp/route/: FloatDirectBuffer.cpp  FloatDirectBuffer.h  FloatRingBufferFFT.h  PhosphorGrid.h  PhosphorJni.cpp  global.h  jniFFT.cpp
samples/generator2/app/src/main/cpp/scope/: FloatDirectBuffer.cpp  FloatDirectBuffer.h  FloatRingBuffer.h  nativeLib.cpp  scope.cpp
samples/generator2/app/src/main/cpp/spectrogram/: BufferIO.h  Decimator.h  FloatRingBufferFFT.h  fft.h  global.cpp  global.h  jniFFT.cpp  plasma.cpp  waterfall.cpp
samples/generator2/appKdownloader/: build.gradle
samples/generator2/audiostreams/: build.gradle  consumer-rules.pro  proguard-rules.pro
samples/generator2/baselineProfile/: build.gradle
samples/generator2/benchmark/: build.gradle
samples/generator2/benchmark/src/main/: AndroidManifest.xml
samples/generator2/docs/superpowers/plans/: 2026-07-15-oscilloscope-display-antialiasing.md  2026-07-20-oscilloscope-phosphor.md  2026-07-21-cpp-layout.md  2026-07-22-node-editor.md
samples/generator2/docs/superpowers/specs/: 2026-07-20-oscilloscope-phosphor-design.md  (+4 more)
samples/generator2/gradle/: libs.versions.toml
samples/generator2/gradle/wrapper/: gradle-wrapper.properties
samples/generator2/resampler/: build.gradle
samples/generator2/tft/: build.gradle
samples/shared/: DefaultErrorCallback.h  Oscillator.h
(+623 files in other folders)
